@@ -16,7 +16,7 @@ module Spec
       def run
         reporter.example_started(example_definition)
         if dry_run
-          example_definition.description = "NO NAME (Because of --dry-run)"
+          example_definition.description = "NO NAME (Because of --dry-run)" if example_definition.description == :__generate_description
           return reporter.example_finished(example_definition, nil, example_definition.description)
         end
 
